test_regress/t/t_select_bad_range.out
%Warning-SELRANGE: t/t_select_bad_range.v:17:13: Selection index out of range: 44:44 outside 43:0
                                               : ... note: In instance 't'
   17 |     sel = mi[44];
      |             ^
                   ... For warning description see https://verilator.org/warn/SELRANGE?v=latest
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Warning-SELRANGE: t/t_select_bad_range.v:18:14: Selection index out of range: 44:41 outside 43:0
                                               : ... note: In instance 't'
   18 |     sel2 = mi[44:41];
      |              ^
%Error: Exiting due to
